Update GUI to fix the following: 1. Prevent Tags from spilling over into the other details 2. Change ... in medical window to !!! to inform user that there are medical details for the student 3. Fix sizing for the MainWindow.fxml so that even at the smallest screen, the horizontal scroll bar will not be needed / will not show

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -354,7 +354,7 @@
 }
 
 #tags {
-    -fx-hgap: 7;
+    -fx-hgap: 4;
     -fx-vgap: 3;
 }
 
@@ -366,7 +366,9 @@
     -fx-background-radius: 2;
     -fx-font-size: 11;
     -fx-wrap-text: true;
-    -fx-max-width: 85;
+    -fx-pref-width: 40;
+    -fx-pref-width: 80;
+    -fx-alignment: center;
 }
 
 #formClass {
